# blockchain-smart-outlet

./: .gitignore  README.md
c-sample/: CMakeLists.txt  coin.c  coin.h  http.c  http.h  log.c  log.h  main.c
outlet/: package-lock.json  package.json
outlet/app/: outlet.js
outlet/app/eth/: coin.js
outlet/app/peripheral/: gpio.js
outletserver/: app.js  package-lock.json  package.json
plug/: package-lock.json  package.json
plug/app/: plug.js
plug/app/eth/: coin.js
plug/app/network/: wifi.js
plug/app/peripheral/: gpio.js
plug/app/utils/: log.js
solidity/: SmartPlug.sol
